modify redeploy scriopt